# aws_lambda_cpp_exp

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  deploy.py  login.sh  main.cpp  test.py
dockerfiles/: Dockerfile.base
terraforms/: lambda_iam_role_policy.json  main.tf
